# metric-regression-gate

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: gate.config.json
metric_gate/: __init__.py  cli.py  compare.py  paths.py
tests/: test_compare.py
